--- a/catalog/web/package.json
+++ b/catalog/web/package.json
@@ -25,10 +25,7 @@
     "@angular/platform-browser": "~2.2.0",
     "@angular/platform-browser-dynamic": "~2.2.0",
     "@angular/router": "~3.2.0",
-    "@angular2-material/button": "^2.0.0-alpha.8-2",
-    "@angular2-material/card": "^2.0.0-alpha.8-2",
-    "@angular2-material/core": "^2.0.0-alpha.8-2",
-    "@angular2-material/icon": "^2.0.0-alpha.8-2",
+    "@angular/material": "^2.0.0-alpha.9-3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "reflect-metadata": "^0.1.8",
@@ -37,25 +34,27 @@
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "concurrently": "^3.1.0",
-    "lite-server": "^2.2.2",
-    "typescript": "^2.0.10",
+    "@types/hammerjs": "2.0.32",
+    "@types/jasmine": "^2.5.36",
+    "@types/node": "^6.0.46",
+    "@types/selenium-webdriver": "^2.53.33",
     "canonical-path": "0.0.2",
+    "concurrently": "^3.1.0",
     "http-server": "^0.9.0",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.4",
     "protractor": "4.0.9",
-    "webdriver-manager": "10.2.5",
     "rimraf": "^2.5.4",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "^2.5.36",
-    "@types/selenium-webdriver": "^2.53.33"
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.10",
+    "typings": "^2.0.0",
+    "webdriver-manager": "10.2.5"
   },
   "repository": {}
 }
