--- a/catalog/web/package.json
+++ b/catalog/web/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "~3.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "primeng": "^1.0.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
