applying smarty in package diagram

--- a/catalog/angular2tutorial/tsconfig.json
+++ b/catalog/angular2tutorial/tsconfig.json
@@ -15,3 +15,5 @@
     "**/*-aot.ts"
   ]
 }
+
+//Solving problems with experimentalDecorators: http://stackoverflow.com/questions/38271273/experimental-decorators-warning-in-visual-studio-code
