--- a/catalog/web/package.json
+++ b/catalog/web/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "~3.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jsonfile": "^2.4.0",
     "ng2-bootstrap": "^1.1.16",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
