--- a/catalog/web/package.json
+++ b/catalog/web/package.json
@@ -31,7 +31,8 @@
     "jsonfile": "^2.4.0",
     "ng2-bootstrap": "^1.1.16",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
+    "bootstrap": "^3.3.6",
+    "rxjs": "^5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.6.26"
   },
@@ -53,7 +54,8 @@
     "lodash": "^4.16.4",
     "protractor": "4.0.9",
     "rimraf": "^2.5.4",
-    "tslint": "^3.15.1",
+    "rxjs": "^5.0.0-rc.1",
+    "tslint": "^4.0.0-dev.0",
     "typescript": "^2.0.10",
     "typings": "^2.0.0",
     "webdriver-manager": "10.2.5"
